# repo-lint

./: .gitignore  .repo-lint.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  knip.json  oxlint.json  package.json  repo-lint.config.ts  repo-lint.config.yaml  tsconfig.json
.github/workflows/: ci.yml  claude-code-review.yml  release.yml
.husky/: pre-commit
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
examples/: benchmark.rs
npm/: index.js  install.js  package.json
npm/directory/: index.d.ts  index.js
npm/file/: index.d.ts  index.js
npm/optional/: index.d.ts  index.js
npm/presets/: index.js  nextjs.js
npm/required/: index.d.ts  index.js
npm/types/: index.d.ts
src/: case.ts  checker.ts  cli.ts  config.ts  errors.ts  index.ts  lib.rs  main.rs  matcher.ts  output.ts  scanner.ts  types.ts  version.ts
src/cache/: incremental.rs  index.ts  mod.rs
src/cli/: check.rs  index.ts  inspect.rs  mod.rs  parser.ts  scaffold.rs
src/commands/: check.ts  index.ts  inspect.ts
src/config/: discovery.rs  index.ts  ir.rs  loader.ts  mod.rs  parser.rs
src/core/: case.ts  index.ts  matcher.ts  scanner.ts
src/engine/: layout_trie.rs  matcher.rs  mod.rs  post_validator.rs  (+2 more)
test/: cache.test.ts  case.test.ts  checker.test.ts  cli-parser.test.ts  cli.test.ts  commands.test.ts  config.test.ts  errors.test.ts  index.test.ts  matcher.test.ts  monorepo.test.ts  output.test.ts  scanner.test.ts  types.test.ts
tests/: dsl_v03_features.rs  integration_complex_config.rs  monorepo_features.rs  monorepo_integration.rs
(+33 files in other folders)
