[package]
name = "repo-lint"
version = "0.3.7"
edition = "2021"
authors = ["Rika Labs"]
description = "A high-performance filesystem layout linter with TypeScript DSL config"
license = "MIT"
repository = "https://github.com/rika-labs/repo-lint"
keywords = ["linter", "filesystem", "structure", "typescript", "monorepo"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "=1.0.197", features = ["derive"] }
serde_json = "1.0"
swc_ecma_parser = "0.149"
swc_ecma_ast = "0.118"
swc_common = { version = "0.37", features = ["sourcemap"] }
ignore = "0.4"
rayon = "1.10"
glob = "0.3"
globset = "0.4"
fast-glob = "0.4"
regex = "1.11"
memchr = "2.7"
crossbeam-channel = "0.5"
compact_str = { version = "0.8", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
colored = "2.1"
similar = "2.6"
walkdir = "2.5"
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"
insta = { version = "1.41", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "repo-lint"
path = "src/main.rs"

[lib]
name = "repo_lint"
path = "src/lib.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }
